fix: fix tool_indexation CSS issue where long select options are overlapped

--- a/tools/tool_indexation/css/tool_indexation.less
+++ b/tools/tool_indexation/css/tool_indexation.less
@@ -58,12 +58,16 @@
 
 				select {
 					opacity: 1;
-					padding: 0.33rem;
+					padding-left: 0.33rem;
+					padding-right: 1.33rem;
+					padding-top: 0.33rem;
+					padding-bottom: 0.33rem;
 					background-color: #f8f9fa;
 					border-radius: 3px;
 					margin-right: 0px;
 					max-width: 20rem;
 					min-width: 7rem;
+					text-overflow: ellipsis;
 
 					@media screen and (max-width: @width_break_point_0) {
 						// max-width: unset;
